--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -7,7 +7,7 @@
   <%= f.text_field :email %></p>
   
   <p><%= f.label :type %><br />
-  <%= f.select :type, [ "athlete", "coach" ]  %></p>
+  <%= f.select :type, [ "Athlete", "Coach" ]  %></p>
 
   <p><%= f.label :password %><br />
   <%= f.password_field :password %></p>
